# realtime-translation-backend

./: .gitignore  Dockerfile  README.md  config.yml  docker-compose.yaml  kill.sh  pyproject.toml  startup.sh
archive/: async_libre_translate.py  sentence_buffer_old.py  server.py  translation_worker_old.py  whisper_old.py  whisper_server_old2.py
archive2/: sentence_buffer.py  transcript_manager.py  whisper_server.py
src/: auth_manager.py  cli.py  config.py  connection_manager.py  logger.py  pretalx_api_wrapper.py  rolling_average.py  room.py  room_manager.py  room_process.py  room_worker.py  sentence_buffer.py  transcript_formatter.py  transcription_manager.py  translation_worker.py  vote_manager.py  whisper_server.py
src/help/: help.md
src/io/: cli.py  config.py  logger.py
src/io_config/: cli.py  config.py  logger.py
src/pretalx_api_wrapper/: conference.py  pretalx_api.py
src/room_system/: room.py  room_manager.py  room_process.py  room_worker.py
src/transcription_system/: sentence_tokenizer.py  transcript_formatter.py  transcription_helper.py  transcription_logger.py  transcription_manager.py
stats/beszel/: .gitignore  docker-compose.yml
stats/umami/: docker-compose.yml
