[tool.poetry]
name = "ssc translation backend"
version = "0.1.0"
description = ""
authors = ["substrato <movementwiki@systemli.org>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.9.23"
onnxruntime = "<=1.19.2"
setuptools = "~69.1"
diart = "^0.9.2"
huggingface-hub = "^0.33.2"
pyannote-audio = "^3.3.2"
libretranslate = "^1.6.5"
libretranslatepy = "2.0.0"
flask = "2.2.5"
flask-socketio = "^5.5.1"
eventlet = "^0.40.1"
ffmpeg-python = "^0.2.0"
sounddevice = "^0.5.2"
numpy = "1.26.4"
aiortc = "^1.13.0"
aiohttp = "^3.12.13"
aiohttp-cors = "^0.8.1"
tiktoken = "^0.9.0"
mosestokenizer = "^1.2.1"
nltk = "^3.9.1"
whisperlivekit = {path = "/home/substrato/Dokumente/aktivistek/scc-translation/WhisperLiveKit", develop = true}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
