[project]
name = "Realtime_Speech_Translation_Backend"
version = "0.1.0"
description = ""
authors = [{ name = "substrato", email = "movementwiki@systemli.org" }]
requires-python = "==3.9.23"
readme = "README.md"
dependencies = [
    "pyannote-audio>=3.3.2,<4",
    "onnxruntime<=1.19.2",
    "setuptools>=69.1,<69.2",
    "diart>=0.9.2,<0.10",
    "huggingface-hub>=0.33.2,<0.34",
    "libretranslatepy==2.0.0",
    "flask==2.2.5",
    "flask-socketio>=5.5.1,<6",
    "eventlet>=0.40.1,<0.41",
    "ffmpeg-python>=0.2.0,<0.3",
    "sounddevice>=0.5.2,<0.6",
    "numpy==1.26.4",
    "aiortc>=1.13.0,<2",
    "aiohttp>=3.12.13,<4",
    "aiohttp-cors>=0.8.1,<0.9",
    "tiktoken>=0.9.0,<0.10",
    "mosestokenizer>=1.2.1,<2",
    "nltk>=3.9.1,<4",
    "whisperlivekit",
    "aioprocessing>=2.0.1,<3",
    "fastapi>=0.116.1,<0.117",
    "uvicorn>=0.35.0,<0.36",
    "librosa>=0.11.0,<0.12",
    "faster-whisper>=1.2.0,<2",
]

# Tried to exclude Nvidia Dependencies because they require a lot of space. Didnt manage to however. May be good to leave this in to have a backup of the versions anyhow.
#[dependency-groups]
#nvidia-gpu = [
#    "torch==2.8.0",
#    "nvidia-cublas-cu12==12.8.4.1",
#    "nvidia-cuda-cupti-cu12==12.8.90",
#    "nvidia-cuda-nvrtc-cu12==12.8.93",
#    "nvidia-cuda-runtime-cu12==12.8.90",
#    "nvidia-cudnn-cu12==9.10.2.21",
#    "nvidia-cublas-cu12==12.8.4.1",
#    "nvidia-cufft-cu12==11.3.3.83",
#    "nvidia-nvjitlink-cu12==12.8.93",
#    "nvidia-cufile-cu12==1.13.1.3",
#    "nvidia-curand-cu12==10.3.9.90",
#    "nvidia-cusolver-cu12==11.7.3.90",
#    "nvidia-cublas-cu12==12.8.4.1",
#    "nvidia-cusparse-cu12==12.5.8.93",
#    "nvidia-nvjitlink-cu12==12.8.93",
#    "nvidia-nvjitlink-cu12==12.8.93",
#    "nvidia-cusparse-cu12==12.5.8.93",
#    "nvidia-cusparselt-cu12==0.7.1",
#    "nvidia-nccl-cu12==2.27.3",
#    "nvidia-nvjitlink-cu12==12.8.93",
#    "nvidia-nvtx-cu12==12.8.90"
#]

[tool.uv]
package = false

[tool.uv.sources]
whisperlivekit = { git = "https://github.com/substratoo/WhisperLiveKit.git", rev = "main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
